# MORS

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  MORS  README.md  contact.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_full.txt  sitemap.xml  tests-integration.json  tests-total.json  tests-unit.json
.github/: copilot-instructions.md
.github/.claude/rules/: mors-code-review.md  mors-tests.md
.github/workflows/: code-style.yaml  nightly.yml  publish-test-badges.yml  publish.yaml  tests.yaml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
How-to/: activity_quantities.html  activity_timelines.html  clusters.html  distribution_percentile.html  evolution.html  habitablezone.html  index.html  installation.html  set_parameters.html  track_quantities.html
How-to/activity_quantities/: index.html
How-to/activity_timelines/: index.html
How-to/clusters/: index.html
How-to/distribution_percentile/: index.html
How-to/evolution/: index.html
How-to/habitablezone/: index.html
How-to/installation/: index.html
How-to/set_parameters/: index.html
How-to/track_quantities/: index.html
Reference/: publications.html
Tutorials/: first_run.html  index.html
Tutorials/first_run/: index.html
docs/: contact.md  getting_started.md  index.md  proteus_framework.md
docs/Explanations/: activity.md  habitablezone.md  proteus.md  rotation.md  spectral_synthesis.md  structure.md  testing.md
docs/How-to/: activity_quantities.md  activity_timelines.md  build_tests.md  clusters.md  distribution_percentile.md  documentation.md  evolution.md  habitablezone.md  index.md  installation.md  proteus_coupling.md  releasing.md  run_tests.md  set_parameters.md  track_quantities.md  troubleshooting.md
docs/Reference/: parameters.md  publications.md
docs/Reference/api/: baraffe.md  cli.md  cluster.md  constants.md  data.md  index.md  miscellaneous.md  parameters.md  physicalmodel.md  rotevo.md  spectrum.md  star.md  stellarevo.md  synthesis.md
docs/Tutorials/: first_run.md  index.md
docs/Validation/: baraffe.md  cluster.md  physicalmodel.md  rotevo.md  spectrum.md  star.md  stellarevo.md  synthesis.md
search/: search_index.json
src/Mors/: spectrum.py  synthesis.py
src/mors/: __init__.py  baraffe.py  cli.py  cluster.py  data.py  logs.py  parameters.py  physicalmodel.py  rotevo.py  spectrum.py  star.py  stellarevo.py  synthesis.py
src/mors/data/: mors_manifest.toml  star.tracks.baraffe_2015.registry.txt
tests/: conftest.py  test_baraffe.py  test_cli.py  test_cluster.py  test_data.py  test_data_live.py  test_logs.py  test_miscellaneous.py  test_physicalmodel.py  test_rotevo.py  test_spada.py  test_spada_FE.py  test_spada_RB.py  test_spectrum.py  test_star.py  test_stellarevo.py  test_synthesis.py
tools/: MakePlots.py  check_test_quality.py  download_spectrum.py  fit_star.ipynb  flux_evolve.ipynb  generate_test_badges.py  test_quality_baseline.json  update_coverage_threshold.py  validate_test_structure.sh
