[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fwl-mors"
dynamic = ["version"]
description = "Stellar rotation and activity evolution model"
readme = "README.md"
authors = [
    {name = "Colin P. Johnstone", email = "colinjohnstone@gmail.com" },
    {name = "Harrison Nicholls",  email = "contact@h-nicholls.space"},
    {name = "Laurent Soucasse",   email = "l.soucasse@esciencecenter.nl"},
    {name = "Tim Lichtenberg",    email = "tim.lichtenberg@rug.nl"},
    {name = "Karen Stuitje",      email = "stuitje@proton.me"}
]
license = {text = "MIT License"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["exoplanet", "stellar evolution"]
requires-python = '>=3.11'
dependencies = [
  'click',
  'fwl-io>=26.7.20',
  'matplotlib',
  'numpy>=2.0.0',
  'osfclient',
  'platformdirs',
  'scipy',
  'zenodo_get',
]

[project.urls]
homepage = "https://github.com/FormingWorlds/MORS"

[project.optional-dependencies]
develop = [
  "coverage[toml]",
  "pip-tools",
  "pytest",
  "pytest-cov",
  "pytest-timeout",
  "ruff",
  "tomlkit"
]
docs = [
    "zensical==0.0.39",
    "mkdocs-material",
    "markdown-include",
    "mkdocs",
    "mkdocstrings[python]",
    "pymdown-extensions"
]
publishing = [
  "twine",
  "wheel",
  "build"
]

[project.scripts]
mors = "mors.cli:cli"

[project.entry-points."fwl_io.manifests"]
mors = "mors.data:manifest_path"

[tool.setuptools]
package-dir = {"mors" = "src/mors"}
include-package-data = true

[tool.setuptools_scm]
# CalVer: tags are bare YY.MM.DD dates (no leading 'v', e.g. 26.01.02).
# setuptools-scm derives the version from the latest git tag.
# version_scheme = "no-guess-dev" is required for CalVer: the default
# "guess-next-dev" would produce 26.1.3.devN+gHASH for commits after
# the 26.01.02 tag, claiming a future calendar date that will collide
# with the next daily release tag. "no-guess-dev" produces
# 26.1.2.post1.devN+gHASH instead, which is honest about the build
# being a post-tag development commit rather than a pre-release of
# the next version. (setuptools-scm emits PEP 440-canonical versions,
# so the 26.01.02 tag normalises to 26.1.2, dropping the leading zeros.)
version_scheme = "no-guess-dev"
version_file = "src/mors/_version.py"

[tool.coverage.run]
branch = true
source = ["mors"]

[tool.coverage.report]
# Full coverage gate: unit + smoke + integration + slow tests, enforced by
# the nightly workflow. Raised one-way toward the 90% PROTEUS-ecosystem
# ceiling by tools/update_coverage_threshold.py; never manually decrease.
# The full suite measures about 99% line coverage; the gate is held at the
# 90% ecosystem ceiling (the guard rejects a value above it).
fail_under = 90.0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mors.coverage_fast]
# Fast PR gate: unit + smoke coverage only, enforced on every PR via
# .github/workflows/tests.yaml. Raised one-way toward the 90% ceiling by
# tools/update_coverage_threshold.py; never manually decrease. The mocked
# unit tier measures about 63% line coverage (the real-track model paths run
# only in the nightly integration tier), so the gate sits below the full gate.
fail_under = 60.0

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast in-process unit tests (mocked track lookups, < 100 ms each)",
    "smoke: real-track lookup on a single star / age (< 30 s each)",
    "integration: real evolution-track model runs (nightly)",
    "slow: full physics validation, run in nightly only",
    "physics_invariant: marks tests that assert a physical invariant (conservation, positivity, boundedness, monotonicity, symmetry).",
    "reference_pinned: marks tests that pin behavior against a published benchmark, analytical limit, or cross-implementation cross-check. Cite the source in the test docstring. Each physics source should contain at least one.",
]

[tool.ruff]
line-length = 96
target-version = "py311"
# _version.py is generated by setuptools-scm at build/install time under
# src/mors/ (gitignored); it is not hand-maintained source.
extend-exclude = ["*.ipynb", "**/_version.py"]

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle (error)
    "W",  # pycodestyle (warning)
    "I",  # isort
]
ignore = [
    "E501",  # Line too long
]

[tool.ruff.lint.isort]
known-first-party = ["mors"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
